# OPENENV-SMART-IRRIGATION-SYSYTEM

./: README.md
usefulenv/: Dockerfile  Readme.md  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
usefulenv/server/: app.py  environment.py  grader.py
